@@ -6,3 +6,15 @@
 6. add environment.yml for all dependencies
 7. modified readme with updated command example and software version
 8. deleted unneccessary old scripts
+
+Feb 27 2021
+1. implement glmnet/rpart/svm and generate plot pdf for spearcor, R-square/normliazed version, feature importance
+2. update readme to put evalmodel before the build model
+3. python script plot_eval.py to plot excel file data generated by evalModel_final.R
+4. output excel contains six tabs:
+    - TE_result: the evaluation result for predicing TE for each model in 10 fold CVs  , sp_cor is spearman correlation, rsq is R-squared statstics
+    - RNA_result:  the evaluation result for predicing RNA-seq RPKM for each model in 10 fold CVs  , sp_cor is spearman correlation, rsq is R-squared statstics
+    - TE_features_accuracy: random-forest feature importance value based on prediction accuracy for TE
+    - TE_features_impurity: random-forest feature importance value based on node impurity for TE
+    - RNA_features_accuracy: random-forest feature importance value based on prediction accuracy for RNA-seq RPKM
+    - RNA_features_impurity: random-forest feature importance value based on node impurity for RNA-seq RPKM
